# expense-tracker

./: .env.template  .gitignore  Dockerfile  LICENCE  README.md  alembic.ini  docker-compose.local.yaml  justfile  main.py  pyproject.toml
backend/: .dockerignore  main.py
backend/api/v1/: __init__.py  users.py
backend/core/: __init__.py  auth_config.py  config.py  helpers.py
backend/core/authentication/: __init__.py  auth_backend.py  strategy.py  transport.py  user_manager.py
backend/core/schemas/: transaction.py  user.py
backend/db/: __init__.py  session.py
backend/db/models/: __init__.py  base.py  transaction.py  user.py
backend/db/repositories/: __init__.py  base.py  transaction_repository.py  user_repository.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_12_21_0321-a7634843581d_create_users_table.py  2025_12_28_1627-ab2441b64657_create_transaction_table.py
migrations/: env.py
migrations/versions/: 2025_12_22_0016-7fb551718c7d_users_table.py  2026_02_15_1505-63bf89f838c1_account_model.py
src/api/v1/: __init__.py  accounts.py  transactions.py  users.py
src/core/: __init__.py  auth_config.py  config.py  exceptions.py  exceptions_handler.py  helpers.py  ioc.py
src/core/schemas/: __init__.py  account.py  transaction.py  user.py
src/db/: __init__.py  session.py
src/db/models/: account.py  base.py  transaction.py  user.py
src/db/repositories/: __init__.py  account_repository.py  (+3 more)
src/models/: enums.py
src/services/: __init__.py  account_service.py  auth_service.py  base_service.py  transaction_service.py  user_service.py
(+11 files in other folders)
