[project]
name = "expense-tracker"
version = "0.0.1"
description = "Expense Tracker API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "authx>=1.4.3",
    "fastapi[standard]>=0.126.0",
    "pwdlib>=0.3.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.45",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
]
